# opengl_thing

./: CMakeLists.txt
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: entfactory.c  entfactory.h  ents.c  ents.h  globals.c  globals.h  main.c  models.c  models.h  physics.c  physics.h  render.c  render.h  util.c  util.h
src/entities/: monkey.c  monkey.h  world.c  world.h
src/models/: bluemodel.mtl  hahamonkey.mtl  spongekey.mtl  wahamonkey.mtl
src/models/goobas/: vertexcol_mix_sphere.fbx  vertexcol_solid_sphere.fbx  vertexcol_solid_sphere.mtl
src/shaders/: tri.frag  tri.vert
